Actualizando el README

--- a/livecoding/README.Rmd
+++ b/livecoding/README.Rmd
@@ -32,18 +32,18 @@ To start a live coding session, open the R script you wish to broadcast in RStud
 ```r
 # Broadcast the currently active RStudio source file.
 livecoding::livecode()
+# Run `livecoding::join("session_id_here")`.
 ```
 
 This will create a new GitHub Gist and print a command for participants to join your session.
 
 ### Joining a Session
 
-If you are a participant, you can join a live coding session using the `join()` function, providing the broadcaster's GitHub username and the Gist ID:
+If you are a participant, you can join a live coding session using the `join()` function, providing the broadcaster's session ID:
 
 ```r
-# Example: Join a session where 'broadcaster_username' is the GitHub user
-# and 'gist_id_here' is the ID of the shared Gist.
-livecoding::join(owner = "broadcaster_username", gist_id = "gist_id_here")
+# Example: Join a session where 'session_id_here' is the ID of the shared live coding session.
+livecoding::join(session_id = "session_id_here")
 ```
 
 Your RStudio session will then automatically update with the broadcaster's code changes.
